# jagent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README  env.py
alembic/versions/: 0001_create_initial_mysql_schema.py  0002_add_merchant_tool_tables.py  0003_add_internal_tool_business_tables.py  0004_add_external_capability_registry_table.py  0005_add_external_capability_health_fields.py  0006_add_evaluation_and_ticket_governance_fields.py  0007_add_agent_profile_tables.py  0008_add_agent_policy_table.py
app/: __init__.py  config.py  dependencies.py  external_agent_stub.py  main.py  schemas.py  tools.py  workflows.py
app/agents/: __init__.py  base.py  loader.py  router.py
app/db/: init_db.py  models.py  session.py
app/registry/: base.py  bootstrap.py  composite_registry.py  local_registry.py  manual_remote_registry.py  nacos_ai_client.py  nacos_client.py  nacos_registry.py  null_registry.py  remote_proxy.py
app/repositories/: agent_policy_repository.py  (+12 more)
config/: mcp.example.json
docs/: agent-gateway-requirements-and-plan.md  local-troubleshooting.md  task-event-protocol.md  task-realtime-ui-outline.md  tech-stack-agentscope.md  tech-stack-agno.md
scripts/: init_db.py  verify_api_flow.py  verify_external_agent_flow.py  verify_stack.py
tests/: test_agent_gateway_invoke.py  test_agent_gateway_services.py  test_agent_profile_service.py  test_api.py  test_external_agent_flow.py  test_internal_tool_provider.py  test_nacos_registry.py  test_registry.py  test_runtime.py  test_tool_execution.py
(+96 files in other folders)
